Rename form reset function to entryForm.reset

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           body: JSON.stringify([{ xAtEndOf, xTotal, xWeeklyChange }])
         }); //await fetch
 
-        form.reset();  // Clear form inputs
+        entryForm.reset();  // Clear form inputs
     
         fetchDataAndUpdateUI();  // Refresh table and chart
     
