--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         e.preventDefault();
         const xAtEndOf = entryForm.atendof.value;
         const xTotal = entryForm.total.value;
-        const xWeeklyChange = 99.99;
+        const xWeeklyChange = "99.99";
 
         await fetch('https://sheetdb.io/api/v1/trac4zp5u8j95', {
           method: 'POST',
