--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       const tableBody = document.getElementById('table-body');
       const lineChartCtx = document.getElementById('line-chart').getContext('2d');
   
+      let prevTotal = 0;
       let chart; // Holds Chart.js instance
 
       async function fetchDataAndUpdateUI() {
@@ -41,6 +42,7 @@
         tableBody.innerHTML = '';
         data.forEach(row => {
           tableBody.innerHTML += `<tr><td>${row["AtEndOf"]}</td><td>${row["Total"]}</td><td>${row["WeeklyChange"]}</td></tr>`;
+          prevTotal = row["Total"];
         }); //data.forEach
 
   // Prepare chart data
@@ -71,7 +73,7 @@
         e.preventDefault();
         const AtEndOf = entryForm.atendof.value;
         const Total = entryForm.total.value;
-        const WeeklyChange = "99.99";
+        const WeeklyChange = entryForm.total.value - prevTotal;
 
         await fetch('https://sheetdb.io/api/v1/73wrvfbt1oosx', {
           method: 'POST',
