Fix index increment in data processing

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             tableBody.innerHTML += `<tr><td align='right'>${row["AtEndOf"]}</td><td align='right'>${row["Total"]}</td><td align='right'>${row["WeeklyChange"]}</td></tr>`;
             prevTotal = row["Total"];
           }
+          index = index + 1;
         }); //data.forEach
 
   // Prepare chart data
