--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>Transact Status</title>
+    <style>
+      * {font-family: Arial, sans-serif;
+        }
+    </style>
   </head>
   <body>
     <table>
