--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         data.forEach(row => {
           if (index >= data.length - 10) {
             tableBody.innerHTML += `<tr><td align='right'>${row["AtEndOf"]}</td><td align='right'>${row["Total"]}</td><td align='right'>${row["WeeklyChange"]}</td></tr>`;
+          }
+          if (index == data.length - 1) {
             prevTotal = row["Total"];
           }
           index = index + 1;
