Set canvas width to 80% for line chart

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </form>
 
-    <canvas id="line-chart"></canvas>
+    <canvas id="line-chart" width 80%></canvas>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
