--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </style>
   </head>
   <body>
-    <table>
+    <table id="values-table" display="none">
       <thead><tr><th>At End Of</th></th><th>Total</th><th>Change</th></tr></thead>
       <tbody id="table-body"></tbody>
     </table>
@@ -114,6 +114,7 @@
 
 // Initial data load
       fetchDataAndUpdateUI();
+      document.getElementById("values-table").style.display = 'block';
   
     </script>
     
