--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </style>
   </head>
   <body>
-    <table id="values-table" display="none">
+    <table id="values-table" style="display:none">
       <thead><tr><th>At End Of</th></th><th>Total</th><th>Change</th></tr></thead>
       <tbody id="table-body"></tbody>
     </table>
