--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="everything" style="display:none;">
-      <table id="values-table" style="display:none">
+      <table>
         <thead><tr><th>At End Of</th></th><th>Total</th><th>Change</th></tr></thead>
         <tbody id="table-body"></tbody>
     </table>
