Increase font size of entry form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <h3>Add New Transact Entry</h3>
 
-    <form id="entry-form">
+    <form id="entry-form" style="font-size: 30px;">
  
       <label for="at-end-of">At End Of:</label>
       <input type="text" id="at-end-of" name="atendof" required>
