--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <form id="entry-form" style="font-size: 30px;">
  
       <label for="at-end-of">At End Of:</label>
-      <input type="text" id="at-end-of" name="atendof" required>
+      <input type="text" id="at-end-of" style="font-size: 30px;" name="atendof" required>
 
       <label for="total">Total:</label>
-      <input type="text" inputmode="decimal" pattern="[0-9]*[.,]?[0-9]*" id="total" name="total" required>
+      <input type="text" inputmode="decimal" pattern="[0-9]*[.,]?[0-9]*" id="total" style="font-size: 30px;" name="total" required>
 
       <button type="submit">Submit</button>
 
