Update form styling and input attributes in index.html

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <tbody id="table-body"></tbody>
     </table>
 
-    <h3>Add New Transact Entry</h3>
+    <p style="font-size: 30px;"><strong>Add New Transact Entry</strong></p>
 
     <form id="entry-form" style="font-size: 30px;">
  
       <label for="at-end-of">At End Of:</label>
-      <input type="text" id="at-end-of" style="font-size: 30px;" name="atendof" required>
+      <input type="text" id="at-end-of" width = 60px; style="font-size: 30px;" name="atendof" required>
 
       <label for="total">Total:</label>
-      <input type="text" inputmode="decimal" pattern="[0-9]*[.,]?[0-9]*" id="total" style="font-size: 30px;" name="total" required>
+      <input type="text" inputmode="decimal" pattern="[0-9]*[.,]?[0-9]*" id="total" width = 80pz; style="font-size: 30px;" name="total" required>
 
       <button type="submit">Submit</button>
 
