--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <style>
       * {font-family: Arial, sans-serif;
         }
+      table, td, th {
+        border: 1px solid;
+        padding: 10px;
+      }
     </style>
   </head>
   <body>
