--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Transact Status</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <style>
       * {font-family: Arial, sans-serif;
         }
