--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         tableBody.innerHTML = '';
         let indx = 0;
         data.forEach(myRow => {
-          let rowColour = "green";
+          let rowColour = "lightgreen";
           if (indx >= (data.length - 10)) {
             if (myRow["WeeklyChange"] < 0) {
               rowColour = "red";
