--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Transact Status</title>
-    <!-- <link rel="shortcut icon" type="image/png" href="favicon.png"> -->
+    <link rel="shortcut icon" type="image/png" href="Transact.png">
     <style>
       * {font-family: Arial, sans-serif;
         }
