--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <input type="text" id="at-end-of" style="font-size: 36px; width: 200px" name="atendof" required>
 
       <label for="total">Total:</label>
-      <input type="text" inputmode="decimal" pattern="[0-9]*[.,]?[0-9]*" id="total" style="font-size: 36px; width: 200px;" name="total" required>
+      <input type="text" inputmode="decimal" pattern="[0-9]*[.,]?[0-9]*[.,]?[0-9]*" id="total" style="font-size: 36px; width: 200px;" name="total" required>
 
-      <button type="submit" style="height: 50px">Submit</button>
+      <button type="submit" style="font-size: 36px">Submit</button>
 
     </form>
 
