--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>Transact Status</title>
-    <link rel="shortcut icon" type="image/png" href="Transact.png">
-    <style>
+<link rel="manifest" href="/manifest.json">
+   <style>
       * {font-family: Arial, sans-serif;
         }
       table, td, th {
