--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 
     <script>
 
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js')
+  .then(reg => console.log('Service Worker registered', reg))
+  .catch(err => console.error('Service Worker registration failed', err));
+}
       let today = new Date();
       let yesterday = new Date(today);
       yesterday.setDate(today.getDate() - 1);
