--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Transact Status</title>
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/TransactStatus/manifest.json">
    <style>
       * {font-family: Arial, sans-serif;
         }
