--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script>
 
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/service-worker.js')
+  navigator.serviceWorker.register('/TransactStatus/service-worker.js')
   .then(reg => console.log('Service Worker registered', reg))
   .catch(err => console.error('Service Worker registration failed', err));
 }
