--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="everything" style="display:none;">
-      <table style="font-size: 36px; padding: 6px">
+      <table style="font-size: 36px; padding: 6px; align: center">
         <thead><tr><th>At End Of</th></th><th>Total</th><th>Change</th></tr></thead>
         <tbody id="table-body"></tbody>
     </table>
