--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <tbody id="table-body"></tbody>
     </table>
 
-    <p style="font-size: 36px;"><strong>Add New Transact Entry</strong></p>
+    <p style="font-size: 36px;"><strong>Add New Entry</strong></p>
 
     <form id="entry-form" style="font-size: 36px;">
  
